# TRONEXIS-AI

./: CMakeCache.txt  CMakeLists.txt  My workflow.json  README.md  app.js  build.ninja  design_guidelines.md  index.html  main.cpp  package.json  pocket.cpp  style.css  vercel.json
NEXUS/: SECRIPT2.js  app.js  index.html  style.css
NEXUS-HUGGINGFACE/: app.js  desktop.ini  index.html
Tyepscrept-backend/: tilo-b32.ts
api/: index.js  summarize.js
client/: index.html
client/src/: index.css
client/src/components/: ChatInput.tsx  EmptyState.tsx  MessageBubble.tsx
client/src/components/examples/: ChatInput.tsx  MessageBubble.tsx
client/src/pages/: Home.tsx
cpp-backend/: CMakeLists.txt  README.md  rio-edition.cpp
cpp-backend/src/: main.cpp
javascrept-backend/: javascreptbackend.js
public/: README.md  app.js  index.html  style.css
rael time supply chain somulation/: bino.cpp  bino.ts
version 3.45.0 TS+VITE/client/src/components/: ModeToggle.tsx  ThemeToggle.tsx
version 3.45.0 TS+VITE/client/src/components/examples/: EmptyState.tsx  ModeToggle.tsx
